@@ -25,19 +25,17 @@
 
 function __plt__ (caller, varargin)
 
+  __plot_globals__;
+
   nargs = nargin ();
 
   if (nargs > 1)
 
     k = 1;
-    j = 1;
+    j = __plot_data_offset__(__current_figure__);
 
     x_set = false;
     y_set = false;
-    have_gp_cmd = false;
-
-    gp_cmd = "__gnuplot_plot__";
-    sep = "";
 
     ## Gather arguments, decode format, gather plot strings, and plot lines.
 
@@ -56,9 +54,9 @@ function __plt__ (caller, varargin)
 	if (x_set)
 	  fmt = __pltopt__ (caller, next_arg);
 	  if (y_set)
-	    [data{j}, fmtstr] = __plt2__ (x, y, fmt);
+	    [__plot_data__{__current_figure__}{j}, fmtstr] = __plt2__ (x, y, fmt);
 	  else
-	    [data{j}, fmtstr] = __plt1__ (x, fmt);
+	    [__plot_data__{__current_figure__}{j}, fmtstr] = __plt1__ (x, fmt);
 	  endif
 	  have_data = true;
 	  x_set = false;
@@ -69,7 +67,7 @@ function __plt__ (caller, varargin)
       elseif (x_set)
 	if (y_set)
 	  fmt = __pltopt__ (caller, "");
-	  [data{j}, fmtstr] = __plt2__ (x, y, fmt);
+	  [__plot_data__{__current_figure__}{j}, fmtstr] = __plt2__ (x, y, fmt);
 	  have_data = true;
 	  x = next_arg;
 	  y_set = false;
@@ -83,24 +81,30 @@ function __plt__ (caller, varargin)
       endif
 
       if (have_data)
-	if (iscell (data{j}))
-	  for i = 1:length (data{j})
-	    gp_cmd = sprintf ("%s%s data{%d}{%d} %s", gp_cmd, sep,
-			      j, i, fmtstr{i});
-	    sep = ",\\\n";
+	if (iscell (__plot_data__{__current_figure__}{j}))
+	  for i = 1:length (__plot_data__{__current_figure__}{j})
+	    __plot_command__{__current_figure__} \
+		= sprintf ("%s%s __plot_data__{__current_figure__}{%d}{%d} %s",
+			   __plot_command__{__current_figure__},
+			   __plot_command_sep__, j, i, fmtstr{i});
+	    __plot_command_sep__ = ",\\\n";
 	  endfor
 	else
-	  gp_cmd = sprintf ("%s%s data{%d} %s", gp_cmd, sep, j, fmtstr);
-	  sep = ",\\\n";
+	  __plot_command__{__current_figure__} \
+	    = sprintf ("%s%s __plot_data__{__current_figure__}{%d} %s",
+		       __plot_command__{__current_figure__},
+		       __plot_command_sep__, j, fmtstr);
+	  __plot_command_sep__ = ",\\\n";
 	endif
 	j++;
-	have_gp_cmd = true;
       endif
 
     endwhile
 
-    if (have_gp_cmd)
-      eval (gp_cmd);
+    __plot_data_offset__(__current_figure__) = j;
+
+    if (! isempty (__plot_command__{__current_figure__}))
+      eval (__plot_command__{__current_figure__});
     endif
 
   else
