@@ -1,3 +1,13 @@
+2005-07-08  John W. Eaton  <jwe@octave.org>
+
+	* plot/__errplot__.m: Use __plot_globals__.
+	* plot/__plt__.m: Likewise.
+	* plot/figure.m: Likewise.
+
+	* plot/hold.m: New file.
+	* plot/ishold.m: New file.
+	* plot/__plot_globals__.m: New file.
+
 2005-07-05  cctsim  <cctsim@yahoo.co.uk>
 
 	* strings/dec2base.m: Don't remove all leading zeros if result is zero.
